# name: test_create
  <class 'dict'> {
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': <class 'list'> [
    ],
    'id': 'test_analysis',
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'job': <class 'dict'> {
      'archived': False,
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': <JobState.WAITING: 'waiting'>,
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
      'workflow': 'nuvs',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 'test_ref',
      'name': 'Test Reference',
    },
    'results': None,
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'subtraction_1',
        'name': 'Subtraction 1',
      },
      <class 'dict'> {
        'id': 'subtraction_2',
        'name': 'Subtraction 2',
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'nuvs',
  }
---
# name: test_create.1
  <class 'dict'> {
    '_id': 'test_analysis',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': <class 'list'> [
    ],
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'ready': False,
    'reference': <class 'dict'> {
      'data_type': 'genome',
      'id': 'test_ref',
      'name': 'Test Reference',
    },
    'results': None,
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'space': <class 'dict'> {
      'id': 0,
    },
    'subtractions': <class 'list'> [
      <class 'dict'> {
        '_id': 'subtraction_1',
        'name': 'Subtraction 1',
      },
      <class 'dict'> {
        '_id': 'subtraction_2',
        'name': 'Subtraction 2',
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'nuvs',
  }
---
